refactor: 불변 리스트로 반환되도록 수정